[gd_scene load_steps=6 format=3 uid="uid://bbvcqwjudehky"]

[ext_resource type="Texture2D" uid="uid://cwwg3n7dqwfm" path="res://arts/dado00.png" id="1_oh1sp"]
[ext_resource type="Script" path="res://scripts/tela_dado.gd" id="1_upc3a"]
[ext_resource type="PackedScene" uid="uid://bo7seyicm2y87" path="res://scenes/button_casa.tscn" id="2_glv02"]
[ext_resource type="PackedScene" uid="uid://dwtyd66bwvxxe" path="res://scenes/progress_bar.tscn" id="4_yc0n6"]

[sub_resource type="LabelSettings" id="LabelSettings_sv7vc"]
font_size = 100
font_color = Color(0, 0, 0, 1)

[node name="TELA_DADO" type="Node2D"]
script = ExtResource("1_upc3a")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 368.0
offset_bottom = 655.0
color = Color(1, 1, 0.776471, 1)

[node name="Dado00" type="Sprite2D" parent="."]
position = Vector2(193, 139)
texture = ExtResource("1_oh1sp")

[node name="Button_casa" parent="." instance=ExtResource("2_glv02")]
offset_left = 6.00001
offset_top = 9.00003
offset_right = 270.0
offset_bottom = 273.0

[node name="Label" type="Label" parent="."]
offset_left = 120.0
offset_top = 258.0
offset_right = 247.0
offset_bottom = 395.0
text = "0"
label_settings = SubResource("LabelSettings_sv7vc")
horizontal_alignment = 1

[node name="Label_resultado" type="Label" parent="."]
offset_left = 120.0
offset_top = 500.0
offset_right = 247.0
offset_bottom = 637.0
text = "0"
label_settings = SubResource("LabelSettings_sv7vc")
horizontal_alignment = 1

[node name="ProgressBar" parent="." instance=ExtResource("4_yc0n6")]
offset_left = 41.0
offset_top = 404.0
offset_right = 325.0
offset_bottom = 447.0

[node name="jogar_bot" type="Button" parent="."]
offset_left = 134.0
offset_top = 465.0
offset_right = 234.0
offset_bottom = 496.0
text = "JOGAR
"

[node name="menos_bot" type="Button" parent="."]
offset_left = 90.0
offset_top = 318.0
offset_right = 117.0
offset_bottom = 349.0
text = "-
"

[node name="mais_bot" type="Button" parent="."]
offset_left = 254.0
offset_top = 317.0
offset_right = 281.0
offset_bottom = 348.0
text = "+"

[connection signal="pressed" from="jogar_bot" to="." method="_on_jogar_bot_pressed"]
[connection signal="pressed" from="menos_bot" to="." method="_on_menos_bot_pressed"]
[connection signal="pressed" from="mais_bot" to="." method="_on_mais_bot_pressed"]
